# yfinance-service

./: .all-contributorsrc  .dockerignore  .gitignore  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alert.rules.yml  docker-compose.yml  dockerfile  prometheus.yml  pyproject.toml  pyproject.toml.bak
.github/: dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: general-issue.md
.github/actions/deploy/: action.yml
.github/actions/release/: action.yml
.github/actions/setup-python-deps/: action.yml
.github/workflows/: build.yml  cd.yml  ci.yml  deploy.yml  lint.yml  pylint.yml  pytest.yml  release.yml  test.yml
app/: auth.py  dependencies.py  main.py  settings.py  state.py
app/clients/: interface.py  yfinance_client.py
app/common/: constants.py  validation.py
app/features/: __init__.py
app/features/debug/: log_store.py  router.py
app/features/earnings/: models.py  router.py  service.py
app/features/health/: router.py
app/features/historical/: models.py  router.py  routes.py  service.py
app/features/info/: models.py  router.py  service.py
app/features/news/: models.py  router.py  service.py
app/features/quote/: conftest.py  models.py  router.py  routes.py  service.py
app/features/snapshot/: __init__.py  models.py  router.py  service.py
app/features/splits/: models.py  router.py  service.py
app/monitoring/: http_middleware.py  instrumentation.py  logging_middleware.py  metrics.py  middleware.py
app/utils/: cache.py  logger.py
app/utils/cache/: __init__.py  interface.py  news_cache.py  old_snapshot_cache.py  ttl_in_memory.py
grafana-provisioning/dashboards/: dashboard.yml
monitoring/grafana/dashboards/: yfinance-dashboard.json
monitoring/infra/: alert.rules.yml  alertmanager.yml  prometheus.yml  recording.rules.yml
tests/: conftest.py  test_main.py  test_metrics.py
tests/clients/: fake_client.py  test_coalescing.py  test_rate_limit.py  test_snapshot_cache.py  test_snapshot_integration.py  test_yfinance_client.py
tests/features/: test_earnings.py  test_historical.py  test_historical_mapping.py  test_info.py  test_metrics.py  test_quote.py  test_quote_bulk.py  test_snapshot.py
tests/integration/: test_api_endpoints.py  test_api_key_auth.py
tests/unit/clients/: fake_client.py  test_coalescing.py  test_snapshot_integration.py  test_yfinance_client.py
tests/unit/features/: test_earnings.py  test_health.py  test_historical.py  test_historical_mapping.py  test_logging.py  test_metrics.py  test_quote.py  test_quote_bulk.py  test_splits.py
tests/unit/features/info/: conftest.py  test_info.py
tests/unit/features/news/: conftest.py  test_news.py
tests/unit/features/quote/: test_quote.py
tests/unit/monitoring/: test_instrumentation.py
tests/unit/utils/: test_logger.py
tests/unit/utils/cache/: test_ttl_cache.py
tests/utils/: test_cache_metrics.py
tests/utils/cache/: test_ttl_cache.py  test_ttl_cache_locks.py
