[project]
name = "yfinance-service"
version = "0.0.24"
description = ""
authors = [
    {name = "Vorckea",email = "akselschrader@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.131.0,<0.132.0)",
    "yfinance (>=1.2.0,<2.0.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "prometheus-client (>=0.24.1,<0.25.0)",
    "starlette (>=0.52.1,<0.53.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]
package-mode = false

[tool.poetry.group.docker.dependencies]
uvloop = {version = "^0.22.1", markers = "sys_platform == 'linux'"}
httptools = "^0.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
ruff = "^0.14.0"
black = "^25.1.0"
pytest-mock = "^3.14.1"
pylint = "^4.0.0"
pytest-cov = "^7.0.0"
httpx = "^0.28.1"
pytest-asyncio = "^1.2.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
asyncio_mode = "auto"

markers = [
    "integration: marks tests as integration tests"
]
    

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Enable Pyflakes, pycodestyle, isort, flake8-docstrings, and more
select = ["E", "F", "W", "I", "N", "D"] 

[tool.ruff.format]
quote-style = "double"
